name:                tagthis
version:             0.1.0.0
synopsis:            Create git tag for the current package.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Daniel Díaz
maintainer:          dhelta.diaz@gmail.com
-- copyright:           
category:            Distribution
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable tagthis
  main-is:             Main.hs
  build-depends:       base == 4.*
                     , process
                     , directory
                     , filepath
                     , Cabal
  default-language:    Haskell2010
